force-app/zurich-base/main/default/objects/Account/fields/AccidentRate__c.field-meta.xml
<CustomField>
    <fullName>AccidentRate__c</fullName>
    <description>Valor de los últimos 3 años</description>
    <label>Accident Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>