force-app/zurich-base/main/default/objects/Account/fields/ActiveAgreements__c.field-meta.xml
<CustomField>
    <fullName>ActiveAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el mediador tiene acuerdos activos.</description>
    <label>Active Agreements</label>
    <type>Checkbox</type>
</CustomField>