force-app/zurich-base/main/default/objects/Account/fields/ActiveParticipationCampaigns__c.field-meta.xml
<CustomField>
    <fullName>ActiveParticipationCampaigns__c</fullName>
    <label>Active participation in campaigns</label>
    <length>80</length>
    <type>Text</type>
</CustomField>