force-app/zurich-base/main/default/objects/Account/fields/ActiveParticipationInFocusGroups__c.field-meta.xml
<CustomField>
    <fullName>ActiveParticipationInFocusGroups__c</fullName>
    <label>Active participation in focus groups</label>
    <length>200</length>
    <type>Text</type>
</CustomField>