force-app/zurich-base/main/default/objects/Account/fields/ActiveReactiveSale__c.field-meta.xml
<CustomField>
    <fullName>ActiveReactiveSale__c</fullName>
    <label>Active or reactive sale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>