force-app/zurich-base/main/default/objects/Account/fields/ActivityIndex__c.field-meta.xml
<CustomField>
    <fullName>ActivityIndex__c</fullName>
    <label>Activity Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>