force-app/zurich-base/main/default/objects/Account/fields/AdministrationEmail__c.field-meta.xml
<CustomField>
    <fullName>AdministrationEmail__c</fullName>
    <label>Administration Email</label>
    <type>Email</type>
</CustomField>