force-app/zurich-base/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Devuelve la edad de un cliente en base a su fecha de cumpleaños</description>
    <formula>IF(NOT(ISBLANK( Birthdate__c)), FLOOR((TODAY() - Birthdate__c) / 365.25), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>