force-app/zurich-base/main/default/objects/Account/fields/AgenteOlimpia__c.field-meta.xml
<CustomField>
    <fullName>AgenteOlimpia__c</fullName>
    <label>Agente Olimpia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maratón</fullName>
            </value>
            <value>
                <fullName>Atleta</fullName>
            </value>
            <value>
                <fullName>Sprinter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>