force-app/zurich-base/main/default/objects/Account/fields/AGRNationalId__c.field-meta.xml
<CustomField>
    <fullName>AGRNationalId__c</fullName>
    <externalId>true</externalId>
    <label>AGR National Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>