force-app/zurich-base/main/default/objects/Account/fields/Alfil__c.field-meta.xml
<CustomField>
    <fullName>Alfil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alfil</label>
    <type>Checkbox</type>
</CustomField>