force-app/zurich-base/main/default/objects/Account/fields/AllowedIntermediaryCharge__c.field-meta.xml
<CustomField>
    <fullName>AllowedIntermediaryCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SI/NO, listado que se carga de HEGEO</description>
    <label>Allowed Intermediary Charge</label>
    <type>Checkbox</type>
</CustomField>