force-app/zurich-base/main/default/objects/Account/fields/Alta_CIMA__c.field-meta.xml
<CustomField>
    <fullName>Alta_CIMA__c</fullName>
    <description>Campo que comprueba si EIAC(Status) es Activo, si lo es, marca el check.</description>
    <formula>ISPICKVAL( EIACStatus__c , &quot;Activo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alta CIMA</label>
    <type>Checkbox</type>
</CustomField>