force-app/zurich-base/main/default/objects/Account/fields/AMTecnicalIssues__c.field-meta.xml
<CustomField>
    <fullName>AMTecnicalIssues__c</fullName>
    <label>AM Technical Issues</label>
    <type>Email</type>
</CustomField>