force-app/zurich-base/main/default/objects/Account/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <label>Archetype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>