force-app/zurich-base/main/default/objects/Account/fields/AssignedTraining__c.field-meta.xml
<CustomField>
    <fullName>AssignedTraining__c</fullName>
    <label>Assigned Training</label>
    <length>80</length>
    <type>Text</type>
</CustomField>