force-app/zurich-base/main/default/objects/Account/fields/Association2__c.field-meta.xml
<CustomField>
    <fullName>Association2__c</fullName>
    <label>Association 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>