force-app/zurich-base/main/default/objects/Account/fields/Association3__c.field-meta.xml
<CustomField>
    <fullName>Association3__c</fullName>
    <label>Association 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACSV</fullName>
            </value>
            <value>
                <fullName>ADECOSE</fullName>
            </value>
            <value>
                <fullName>AMZ</fullName>
            </value>
            <value>
                <fullName>APROCOR</fullName>
            </value>
            <value>
                <fullName>AUNNA</fullName>
            </value>
            <value>
                <fullName>AUNNA Compromiso</fullName>
            </value>
            <value>
                <fullName>CENTERBROCK</fullName>
            </value>
            <value>
                <fullName>COJEBRO</fullName>
            </value>
            <value>
                <fullName>NEWCORRED</fullName>
            </value>
            <value>
                <fullName>WNETWORKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>