force-app/zurich-base/main/default/objects/Account/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <length>80</length>
    <type>Text</type>
</CustomField>