force-app/zurich-base/main/default/objects/Account/fields/AutoVideo__c.field-meta.xml
<CustomField>
    <fullName>AutoVideo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Video</label>
    <type>Checkbox</type>
</CustomField>