force-app/zurich-base/main/default/objects/Account/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>(OCS/ZE). Fecha de nacimiento (personas) o constitución de la compañía</description>
    <label>Birthdate / Incorporation date</label>
    <type>Date</type>
</CustomField>