force-app/zurich-base/main/default/objects/Account/fields/BirthdateSDM__c.field-meta.xml
<CustomField>
    <fullName>BirthdateSDM__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>