force-app/zurich-base/main/default/objects/Account/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(OCS/ZE). Destinado a gestionar la visibilidad del cliente debido a la GDPR. Primer nivel de restricción de acceso</description>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>