force-app/zurich-base/main/default/objects/Account/fields/BrokeragesGrouping__c.field-meta.xml
<CustomField>
    <fullName>BrokeragesGrouping__c</fullName>
    <label>Brokerages Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alkora</fullName>
            </value>
            <value>
                <fullName>Cicor</fullName>
            </value>
            <value>
                <fullName>Coinbroker</fullName>
            </value>
            <value>
                <fullName>Confide</fullName>
            </value>
            <value>
                <fullName>ERSM</fullName>
            </value>
            <value>
                <fullName>Ferrer i Ojeda</fullName>
            </value>
            <value>
                <fullName>G InsurTech</fullName>
            </value>
            <value>
                <fullName>Grupo Aras</fullName>
            </value>
            <value>
                <fullName>Grupo Galilea</fullName>
            </value>
            <value>
                <fullName>Grupo Pacc y P.Trebol</fullName>
            </value>
            <value>
                <fullName>Howden-Artai-Assiteca</fullName>
            </value>
            <value>
                <fullName>Jori Armengol</fullName>
            </value>
            <value>
                <fullName>Kalibo</fullName>
            </value>
            <value>
                <fullName>Materh</fullName>
            </value>
            <value>
                <fullName>Mediaria</fullName>
            </value>
            <value>
                <fullName>Medicorasse</fullName>
            </value>
            <value>
                <fullName>Summa</fullName>
            </value>
            <value>
                <fullName>Club Català de Corredors</fullName>
            </value>
            <value>
                <fullName>Ruíz - Re</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>