force-app/zurich-base/main/default/objects/Account/fields/BrokerRanking__c.field-meta.xml
<CustomField>
    <fullName>BrokerRanking__c</fullName>
    <label>Broker Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>