force-app/zurich-base/main/default/objects/Account/fields/BuildingSpecialist__c.field-meta.xml
<CustomField>
    <fullName>BuildingSpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Specialist</label>
    <type>Checkbox</type>
</CustomField>