force-app/zurich-base/main/default/objects/Account/fields/BusinessesEmail__c.field-meta.xml
<CustomField>
    <fullName>BusinessesEmail__c</fullName>
    <label>Businesses Email</label>
    <type>Email</type>
</CustomField>