force-app/zurich-base/main/default/objects/Account/fields/BusinessManagerAffiliationCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagerAffiliationCode__c</fullName>
    <label>Business Manager Affiliation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>