force-app/zurich-base/main/default/objects/Account/fields/BusinessManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagerEmail__c</fullName>
    <description>SDM: Responsable Negocio Email</description>
    <label>Business Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>