force-app/zurich-base/main/default/objects/Account/fields/BusinessManagerName__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagerName__c</fullName>
    <label>Business Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>