force-app/zurich-base/main/default/objects/Account/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <description>(OCS/ZE). Código de negocio asociado a la cuenta. Al existir este dato únicamente a nivel de póliza, el CRM lo informa en base al valor de Código de Negocio de la póliza más reciente</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>