force-app/zurich-base/main/default/objects/Account/fields/BusinessSpecialist__c.field-meta.xml
<CustomField>
    <fullName>BusinessSpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Specialist</label>
    <type>Checkbox</type>
</CustomField>