force-app/zurich-base/main/default/objects/Account/fields/CampaignsURL__c.field-meta.xml
<CustomField>
    <fullName>CampaignsURL__c</fullName>
    <label>Campaigns URL</label>
    <type>Url</type>
</CustomField>