force-app/zurich-base/main/default/objects/Account/fields/CAR__c.field-meta.xml
<CustomField>
    <fullName>CAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mediador tiene bolsa de descuentos para Pymes y Comercios</description>
    <label>CAR</label>
    <type>Checkbox</type>
</CustomField>