force-app/zurich-base/main/default/objects/Account/fields/Cartera_2021__c.field-meta.xml
<CustomField>
    <fullName>Cartera_2021__c</fullName>
    <formula>IF(ISNULL(Cartera_2021_agrupaciones__c), Cartera_2021_mediadores__c, Cartera_2021_agrupaciones__c)</formula>
    <label>Cartera 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>