force-app/zurich-base/main/default/objects/Account/fields/Cartera_2021_agrupaciones__c.field-meta.xml
<CustomField>
    <fullName>Cartera_2021_agrupaciones__c</fullName>
    <label>Cartera 2021 agrupaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>