force-app/zurich-base/main/default/objects/Account/fields/Cartera_2021_mediadores__c.field-meta.xml
<CustomField>
    <fullName>Cartera_2021_mediadores__c</fullName>
    <label>Cartera 2021 mediadores</label>
    <summarizedField>KPI__c.Portfolio__c</summarizedField>
    <summaryFilterItems>
        <field>KPI__c.CalcYear__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KPI__c.Temporalidad__c</field>
        <operation>equals</operation>
        <value>YTD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KPI__c.EstructuraUnificada__c</field>
        <operation>notEqual</operation>
        <value>RESTO</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KPI__c.CalcMonth__c</field>
        <operation>equals</operation>
        <value>12</value>
    </summaryFilterItems>
    <summaryForeignKey>KPI__c.Intermediary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>