force-app/zurich-base/main/default/objects/Account/fields/CaseOpen__c.field-meta.xml
<CustomField>
    <fullName>CaseOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CaseOpen</label>
    <type>Checkbox</type>
</CustomField>