force-app/zurich-base/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium (PV-1)</fullName>
            </value>
            <value>
                <fullName>Plus (PV0)</fullName>
            </value>
            <value>
                <fullName>Estándar (PV1)</fullName>
            </value>
            <value>
                <fullName>Básica (PV2)</fullName>
            </value>
            <value>
                <fullName>Esencial (PV3)</fullName>
            </value>
            <value>
                <fullName>Varios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>