force-app/zurich-base/main/default/objects/Account/fields/Category_Version__c.field-meta.xml
<CustomField>
    <fullName>Category_Version__c</fullName>
    <label>Category Version</label>
    <type>Date</type>
</CustomField>