force-app/zurich-base/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Bank Insurance</fullName>
            </value>
            <value>
                <fullName>Direct Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>