force-app/zurich-base/main/default/objects/Account/fields/ChannelZone__c.field-meta.xml
<CustomField>
    <fullName>ChannelZone__c</fullName>
    <label>Channel Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>