force-app/zurich-base/main/default/objects/Account/fields/ChannelZoneCode__c.field-meta.xml
<CustomField>
    <fullName>ChannelZoneCode__c</fullName>
    <label>Channel Zone Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>