force-app/zurich-base/main/default/objects/Account/fields/ClaimsEmail__c.field-meta.xml
<CustomField>
    <fullName>ClaimsEmail__c</fullName>
    <label>Claims Email</label>
    <type>Email</type>
</CustomField>