force-app/zurich-base/main/default/objects/Account/fields/ClaimsPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimsPhoneNumber__c</fullName>
    <label>Claims Phone Number</label>
    <type>Phone</type>
</CustomField>