force-app/zurich-base/main/default/objects/Account/fields/ClassDescription__c.field-meta.xml
<CustomField>
    <fullName>ClassDescription__c</fullName>
    <label>Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>