force-app/zurich-base/main/default/objects/Account/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <description>Agrupación de Clientes</description>
    <label>Client Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>