force-app/zurich-base/main/default/objects/Account/fields/Club_Olimpia_Pymes__c.field-meta.xml
<CustomField>
    <fullName>Club_Olimpia_Pymes__c</fullName>
    <label>Club Olimpia (Pymes)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>