force-app/zurich-base/main/default/objects/Account/fields/Club_Olimpia_Vida__c.field-meta.xml
<CustomField>
    <fullName>Club_Olimpia_Vida__c</fullName>
    <label>Club Olimpia (Vida)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>