force-app/zurich-base/main/default/objects/Account/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <description>(OCS). Códigos de actividad económica</description>
    <label>CNAE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00100</fullName>
            </value>
            <value>
                <fullName>00111</fullName>
            </value>
            <value>
                <fullName>00112</fullName>
            </value>
            <value>
                <fullName>00113</fullName>
            </value>
            <value>
                <fullName>00114</fullName>
            </value>
            <value>
                <fullName>00115</fullName>
            </value>
            <value>
                <fullName>00116</fullName>
            </value>
            <value>
                <fullName>00119</fullName>
            </value>
            <value>
                <fullName>00120</fullName>
            </value>
            <value>
                <fullName>00121</fullName>
            </value>
            <value>
                <fullName>00122</fullName>
            </value>
            <value>
                <fullName>00123</fullName>
            </value>
            <value>
                <fullName>00124</fullName>
            </value>
            <value>
                <fullName>00125</fullName>
            </value>
            <value>
                <fullName>00126</fullName>
            </value>
            <value>
                <fullName>00127</fullName>
            </value>
            <value>
                <fullName>00128</fullName>
            </value>
            <value>
                <fullName>00129</fullName>
            </value>
            <value>
                <fullName>00130</fullName>
            </value>
            <value>
                <fullName>00140</fullName>
            </value>
            <value>
                <fullName>00141</fullName>
            </value>
            <value>
                <fullName>00142</fullName>
            </value>
            <value>
                <fullName>00143</fullName>
            </value>
            <value>
                <fullName>00144</fullName>
            </value>
            <value>
                <fullName>00145</fullName>
            </value>
            <value>
                <fullName>00146</fullName>
            </value>
            <value>
                <fullName>00147</fullName>
            </value>
            <value>
                <fullName>00149</fullName>
            </value>
            <value>
                <fullName>00150</fullName>
            </value>
            <value>
                <fullName>00161</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>