force-app/zurich-base/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>