force-app/zurich-base/main/default/objects/Account/fields/CommercialActivity__c.field-meta.xml
<CustomField>
    <fullName>CommercialActivity__c</fullName>
    <description>(ZE). Categoría comercial de la empresa</description>
    <label>Commercial Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>101100</fullName>
            </value>
            <value>
                <fullName>101310</fullName>
            </value>
            <value>
                <fullName>101350</fullName>
            </value>
            <value>
                <fullName>101365</fullName>
            </value>
            <value>
                <fullName>101370</fullName>
            </value>
            <value>
                <fullName>101420</fullName>
            </value>
            <value>
                <fullName>101430</fullName>
            </value>
            <value>
                <fullName>101510</fullName>
            </value>
            <value>
                <fullName>101840</fullName>
            </value>
            <value>
                <fullName>101930</fullName>
            </value>
            <value>
                <fullName>101960</fullName>
            </value>
            <value>
                <fullName>102320</fullName>
            </value>
            <value>
                <fullName>102390</fullName>
            </value>
            <value>
                <fullName>102480</fullName>
            </value>
            <value>
                <fullName>102530</fullName>
            </value>
            <value>
                <fullName>102570</fullName>
            </value>
            <value>
                <fullName>102660</fullName>
            </value>
            <value>
                <fullName>201215</fullName>
            </value>
            <value>
                <fullName>201216</fullName>
            </value>
            <value>
                <fullName>201440</fullName>
            </value>
            <value>
                <fullName>201920</fullName>
            </value>
            <value>
                <fullName>202450</fullName>
            </value>
            <value>
                <fullName>202510</fullName>
            </value>
            <value>
                <fullName>202540</fullName>
            </value>
            <value>
                <fullName>202590</fullName>
            </value>
            <value>
                <fullName>203000</fullName>
            </value>
            <value>
                <fullName>251050</fullName>
            </value>
            <value>
                <fullName>251140</fullName>
            </value>
            <value>
                <fullName>251255</fullName>
            </value>
            <value>
                <fullName>251600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>