force-app/zurich-base/main/default/objects/Account/fields/CompaniesTheyWorkWith__c.field-meta.xml
<CustomField>
    <fullName>CompaniesTheyWorkWith__c</fullName>
    <label>Companies they work with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AXA</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
            <value>
                <fullName>Reale</fullName>
            </value>
            <value>
                <fullName>Generalli</fullName>
            </value>
            <value>
                <fullName>Fiatc</fullName>
            </value>
            <value>
                <fullName>Segur Caixa</fullName>
            </value>
            <value>
                <fullName>Mutua Madrileña</fullName>
            </value>
            <value>
                <fullName>Mapfre</fullName>
            </value>
            <value>
                <fullName>Lagun Aro</fullName>
            </value>
            <value>
                <fullName>Mútua General</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>DKV</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>