force-app/zurich-base/main/default/objects/Account/fields/Conectivity__c.field-meta.xml
<CustomField>
    <fullName>Conectivity__c</fullName>
    <label>Conectivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alta No Activo</fullName>
            </value>
            <value>
                <fullName>Alta Activos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>