force-app/zurich-base/main/default/objects/Account/fields/ConectivityWsProvider__c.field-meta.xml
<CustomField>
    <fullName>ConectivityWsProvider__c</fullName>
    <label>Conectivity (ws provider)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>