force-app/zurich-base/main/default/objects/Account/fields/ConsultorPyme__c.field-meta.xml
<CustomField>
    <fullName>ConsultorPyme__c</fullName>
    <label>Consultor PYME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>