force-app/zurich-base/main/default/objects/Account/fields/CsmAdministrationManager__c.field-meta.xml
<CustomField>
    <fullName>CsmAdministrationManager__c</fullName>
    <label>CSM Administration Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>