force-app/zurich-base/main/default/objects/Account/fields/CsmIndividualsManager__c.field-meta.xml
<CustomField>
    <fullName>CsmIndividualsManager__c</fullName>
    <label>CSM Individuals Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>