force-app/zurich-base/main/default/objects/Account/fields/CsmPhone__c.field-meta.xml
<CustomField>
    <fullName>CsmPhone__c</fullName>
    <label>CSM Phone</label>
    <type>Phone</type>
</CustomField>