force-app/zurich-base/main/default/objects/Account/fields/CustomerNum__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum__c</fullName>
    <description>Code that IBA generated to identify a customer</description>
    <externalId>true</externalId>
    <inlineHelpText>Code that IBA generated to identify a customer</inlineHelpText>
    <label>Customer Num</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>