force-app/zurich-base/main/default/objects/Account/fields/CustomerNum_EMEA__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum_EMEA__c</fullName>
    <externalId>true</externalId>
    <label>Customer Num EMEA</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>