force-app/zurich-base/main/default/objects/Account/fields/CustomerNum_Partner__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum_Partner__c</fullName>
    <externalId>true</externalId>
    <label>Customer Num Multi-Partner</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>